--- a/principal.css
+++ b/principal.css
@@ -52,16 +52,16 @@ body{
     border-left: 3px double black;
 }
 #principal{
-    float: left;
+    float: right;
     width: 1075px;
     margin: 21px;
 }
-#aside{
+footer#aside{
     float: left;
     width: 220px;
-    margin: 25px 50px;
+    margin: 25px 40px;
     padding: 20px;
-    background-color: yellow;
+    background-color: rgb(238, 154, 38);
 }
 #pie{
     clear: both;
