--- a/principal.css
+++ b/principal.css
@@ -28,6 +28,8 @@ header, section, footer aside, nav, article, figcaption{
 }
 body{
     text-align: center;
+    background-image: url(https://fondosmil.com/fondo/5778.jpg);
+    background-size: contain;
 }
 /*DISEÑO DEL TEMPLATE*/
 #divGeneral{
@@ -41,12 +43,12 @@ body{
     margin-top: -7px;
 }
 #cabecera{
-    background-color: aqua;
+    background-color: rgb(0, 255, 166);
     padding: 20px;
 }
 #menu{
     text-align: center;
-    background-color: orange;
+    background-color: rgb(0, 140, 255);
     padding: 5px 15px;
 }
 #menu li{
@@ -80,18 +82,13 @@ footer#aside{
     width: 150px;
     margin: 25px 0px;
     padding: 20px;
-    background-color: rgb(238, 154, 38);
+    background-color: rgb(246, 102, 63);
 }
-#pie{
-    clear: both;
-    text-align: center;
-    padding: 20px;
-    border-top: 2px solid silver;
-}
+
 section#principal{
     width: 735px;
     margin: 15px 5px;
-    background: rgb(2, 138, 29);
+    background: rgb(37, 181, 66);
     border: 1px solid grey;
     border-radius: 20px;
     padding: 20px;
@@ -99,7 +96,7 @@ section#principal{
 }
 article footer{
     text-align: left;
-    color: red;
+    color: rgb(255, 147, 147);
 }
 figcaption{
     font: italic 10px sans-serif;
@@ -109,7 +106,7 @@ div{
     width: 200px;
     margin: 20px;
     padding: 10px;
-    border: 1px solid rgb(179, 25, 25);
+    border: 1px solid rgb(0, 0, 0);
     box-sizing: border-box;
 }
 #src{
